test/compiler/invalid_programs/methods/null_return_type_distinction.jm
#?!TypeError

def foo()
  return
  return true
end
